fix display issues on /courses/X/users/Y
test plan:
 - have a course in an account with user profiles turned off
 - as a student, respond to some discussions in a course
 - view the student's course user profile page
   /courses/X/students/Y
 -> the table headers in the "Name and Email" box should be
    left-aligned
 -> the bodies of the "recent messages" should appear below
    the "from" line, not kind-of-diagonally-to-the-right

fixes CNVS-4618

Reviewed-on: https://gerrit.instructure.com/18668
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Adam Phillipps <adam@instructure.com>

--- a/app/stylesheets/roster_user.sass
+++ b/app/stylesheets/roster_user.sass
@@ -15,7 +15,9 @@ fieldset
 table.details
   td
     padding: 1px 5px
-    
+  th
+    text-align: left
+
 .user-switch-alert
   border: 1px solid black
   background-color: #FFD
